manifests/mysql.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql

---
apiVersion: v1
kind: Service
metadata:
  namespace: mysql
  name: mysql
  labels:
    app: mysql
spec:
  type: NodePort
  ports:
  - port: 3306
    name: mysql
    nodePort: 30006
  - port: 8080
    name: adminer
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: mysql
  labels:
    app: mysql
  name: mysql
spec:
  serviceName: "mysql"
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8.0.17
        name: mysql
        args: ["--default-authentication-plugin=mysql_native_password"]
        volumeMounts:
        - name: mysql-pvc
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
          name: mysql
      - image: adminer
        name: adminer
        ports:
        - containerPort: 8080
  volumeClaimTemplates:
  - metadata:
     name: mysql-pvc
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "standard-retain"
      resources:
        requests:
          storage: 1Gi
#      volumes:
#        - name: mysqlnfspvc
#          persistentVolumeClaim:
#            claimName: mysql-pv-claim
#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: mysql-pv-claim
#  namespace: mysql
#spec:
#  storageClassName: nfs
#  accessModes:
#    - ReadWriteMany
#  resources:
#    requests:
#      storage: 1Gi
