manifests/ingress.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: magento-virtual-host-ingress
  labels:
    app: magento
  namespace: ingress
spec:
  rules:
  - host: customer1.magento.com
    http:
      paths:
      - path: /
        backend:
          serviceName: magento-customer1-external-svc 
          servicePort: 80
  - host: customer2.magento.com
    http:
      paths:
      - path: /
        backend:
          serviceName: magento-customer2-external-svc
          servicePort: 80
